force-app/main/default/objects/ccrz__E_InvoiceItem__c/ccrz__E_InvoiceItem__c.object-meta.xml
<CustomObject>
    <description>Represents invoice detail and reference to other objects.  The invoice item should be a running record of the invoice.  The initial set of data will be the initial detail of the invoice.</description>
    <label>CC Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000000000}</displayFormat>
        <label>CC Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>