force-app/main/default/objects/ccrz__E_InvoiceItem__c/fields/ccrz__CCOrder__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order to which this invoice item applies (optional)</description>
    <label>CC Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>CC Invoice Items</relationshipLabel>
    <relationshipName>CCInvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>