force-app/main/default/objects/ccrz__E_InvoiceItem__c/fields/ccrz__CCOrderItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific order item to which this invoice applies (optional)</description>
    <label>CC Order Item</label>
    <referenceTo>ccrz__E_OrderItem__c</referenceTo>
    <relationshipLabel>CC Invoice Items</relationshipLabel>
    <relationshipName>CCInvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>