force-app/main/default/objects/ccrz__E_InvoiceItem__c/fields/ccrz__InvoiceItemId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InvoiceItemId__c</fullName>
    <description>External identifier.</description>
    <externalId>true</externalId>
    <label>Invoice Item Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>