force-app/main/default/objects/ccrz__E_InvoiceItem__c/fields/ccrz__OriginalAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OriginalAmount__c</fullName>
    <description>The original amount of the invoice item. Once set this should not be changed. Could be negative or positive.</description>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>