force-app/main/default/objects/ccrz__E_InvoiceItem__c/fields/ccrz__Type__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Type__c</fullName>
    <description>E.g. Detail, Comment, Payment.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>